--- a/build.yaml
+++ b/build.yaml
@@ -19,6 +19,7 @@
 ---
 include:
   - board: nice_nano_v2
-    shield: lily58_left
+    shield: lily58_lef
+    snippet: studio-rpc-usb-uart
   - board: nice_nano_v2
     shield: lily58_right
