--- a/build.yaml
+++ b/build.yaml
@@ -19,7 +19,7 @@
 ---
 include:
   - board: nice_nano_v2
-    shield: lily58_lef
+    shield: lily58_left
     snippet: studio-rpc-usb-uart
   - board: nice_nano_v2
     shield: lily58_right
